--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -10,7 +10,7 @@
             {{ if .Site.Params.footer.terms}}<span><a href="{{ "/terms" }}">Terms</a></span>{{end}}
             {{ if .Site.Params.footer.privacy }}<span><a href="{{ "/privacy/" }}" title="Privacy Policy">Privacy</a></span>{{end}}
             {{ if .Site.Params.footer.streaming }}<span><a href="{{ "/policy/streaming-policy" }}" title="Streaming Policy">Streaming</a></span>{{end}}
-            {{ if .Site.Params.footer.discord }}<span><a href="{{ "/policy/discord-code-of-conduct" }}">Discord <abbr title="Code of Conduct">CoC</abbr></a></span>{{end}}
+            {{ if .Site.Params.footer.discord }}<span><a href="{{ "/policy/discord-code-of-conduct" }}">Discord <abbr title="Code of Conduct">COC</abbr></a></span>{{end}}
         </div>
     </div>
     {{ end }}
