Updated Matomo img code

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
     <!-- Matomo Image Tracker-->
-        <img referrerpolicy="no-referrer-when-downgrade" src="https://matomo.volcanolair.co/matomo.php?idsite=1&amp;rec=1" style="border:0" alt="" />
+        <noscript><p><img referrerpolicy="no-referrer-when-downgrade" src="//matomo.volcanolair.co/matomo.php?idsite=1&amp;rec=1" style="border:0;" alt="" /></p></noscript>
     <!-- End Matomo -->
 
     {{if or (.Site.Params.footer.trademark) (.Site.Params.footer.author) (.Site.Params.footer.copyright) (.Site.Params.footer.rss) (.Site.Params.footer.topText) }}
